--- a/appFotos/client/app/listagem/listagem.component.html
+++ b/appFotos/client/app/listagem/listagem.component.html
@@ -1,33 +1,28 @@
-<h1>Listagem de fotos</h1>
-
 <div class="jumbotron">
-    <h1 class="text-center">Fotos</h1>
+    <h1 class="text-center">Alurapic</h1>
 </div>
 <div class="container">
-
     <div class="row">
         <div class="col-md-12">
             <form>
-                <div class="input-group">
+                 <div class="input-group">
                     <span class="input-group-btn">
+                         
                         <a [routerLink]="['/cadastro']" class="btn btn-primary">
                             Novo foto
                         </a>
                     </span>
-    
-                    <!-- campo para filtrar pelo titulo -->
-                    <input #textoProcurado (keyup)="0" class="form-control" placeholder="filtrar pelo título da foto">
-                </div>
+                    <input class="form-control" #textoProcurado (keyup)="0" placeholder="filtrar pelo título da foto">
+                </div> 
             </form>
-        </div>
-        <!-- fim col-md-12 -->
-    </div>
-    <!-- fim row -->
+        </div> <!-- fim col-md-12 -->
+    </div> <!-- fim row -->
     <br>
-    <p>{{textoProcurado.value}}</p>
+
     <div class="row">
-        <painel *ngFor="let foto of fotos | filtrarPorTitulo: textoProcurado.value" [titulo]="foto.titulo | uppercase" class="col-md-2">
-            <foto [titulo]="foto.titulo" [url]="foto.url"> </foto>
+        <painel *ngFor="let foto of fotos" titulo="{{foto.titulo | uppercase}}"  class="col-md-2">
+            <foto titulo="{{foto.titulo}}" url="{{foto.url}}">
+            </foto>
         </painel>
-    </div>
+    </div><!-- fim row -->
 </div>
