--- a/Treinamento angular 2/client/app/app.component.html
+++ b/Treinamento angular 2/client/app/app.component.html
@@ -1,13 +1,1 @@
-<div class="jumbotron">
-    <h1 class="text-center">Sistema de fotos</h1>
-</div>
-<div class="container">
-   <div class="row">
-        <painel *ngFor="let foto of fotos" titulo="{{foto.titulo}}" class="col-md-2">
-            <foto url="{{foto.url}}" titulo="{{foto.titulo}}"></foto> 
-        </painel>
-   </div>
- 
-   <text></text>
-   <cadastro></cadastro>
-</div>
+<router-outlet></router-outlet>
